--- a/src/main/resources/templates/shopInformation.html
+++ b/src/main/resources/templates/shopInformation.html
@@ -20,7 +20,8 @@
 		</div>
 	</div>
 
-	<div id="main" th:each="shop : ${shopLists}">
+<!--	<div id="main" th:each="shop : ${shopLists}">-->
+	<div id="main" >
 
 		<div class="image">
 			<a href="@{/cookCategory}" target="_blank">
