--- a/src/main/resources/templates/commons/layout.html
+++ b/src/main/resources/templates/commons/layout.html
@@ -17,7 +17,7 @@
 			</a>
 
 			<!--a href="/若松さんのhtml名">-->
-			<a href="/calender2">
+			<a href="/calender">
 				<img src="/image/mypage.png" alt="Sample Image">
 				マイページ
 			</a>
