comp画面に紙飛行機いれてみた

--- a/src/main/resources/static/css/shopList.css
+++ b/src/main/resources/static/css/shopList.css
@@ -17,7 +17,7 @@ body {
 }
 
 #headline {
-/*	position: fixed;*/
+	/*	position: fixed;*/
 	/*	 下線を追加 */
 	border-bottom: 3px solid rgb(0, 128, 0);
 }
@@ -75,8 +75,7 @@ h2:first-letter {
 	color: #eb6100;
 }
 
-#content1
-{
+#content1 {
 	/* 写真を枠内に入れる処理 */
 	display: flex;
 	align-items: center;
@@ -101,8 +100,7 @@ h2:first-letter {
 }
 
 /* 枠をずらしている処理 */
-#content1:before
-:before {
+#content1:before:before {
 	position: absolute;
 	top: -7px;
 	left: -7px;
@@ -113,8 +111,7 @@ h2:first-letter {
 }
 
 /* アニメーション*/
-#content1
- {
+#content1 {
 	/* 「s」がかかる時間 */
 	animation: slideIn 3s cubic-bezier(0.25, 1, 0.5, 1) forwards;
 }
@@ -142,6 +139,16 @@ h2:first-letter {
 	margin-right: 3%;
 	margin-top: 3%;
 	/* 写真とテキストの間に余白を設定 */
+	/* 画像の角が丸くなるアニメーション */
+	border-radius: 6px;
+	transition-duration: .5s
+}
+
+.shopimg:hover {
+	/* 画像の角が丸くなるアニメーション */
+	border-radius: 50%;
+	box-shadow: 0px 0px 16px -6px rgba(0, 0, 0, 0.6);
+
 }
 
 .text {
