--- a/src/main/resources/templates/settlement/comp.html
+++ b/src/main/resources/templates/settlement/comp.html
@@ -70,7 +70,7 @@
 		  <div class="container">
 		    <h1>注文が完了しました</h1>
 		    <p>ご注文ありがとうございます。</p>
-		    <a href="cart.html" class="button">カートに戻る</a>
+		    <a th:href="@{cart.html}" class="button">カートに戻る</a>
 		  </div>
 		
 		  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
