--- a/src/main/resources/templates/shopList.html
+++ b/src/main/resources/templates/shopList.html
@@ -43,7 +43,7 @@
 				}
 			</style>
 			<div class="example">
-				<a th:href="@{/cookCategory(shopName=${shop.shopName})}" class="btn btn-tag"><i class="fas fa-shopping-cart"></i>注文はこちら</a>
+				<a th:href="@{/cookCategory(shopName=${shop.shopName},id=${shop.id})}" class="btn btn-tag"><i class="fas fa-shopping-cart"></i>注文はこちら</a>
 <!--				<a class="Information" href="/shopInformation">店舗情報を見る</a>-->
 
 <a class="Information" th:href="@{/shopInformation(id=${shop.id})}">店舗情報を見る</a>
