--- a/src/main/resources/static/css/cookCategory.css
+++ b/src/main/resources/static/css/cookCategory.css
@@ -34,12 +34,24 @@ body {
 		transform: translateY(-10px);
 	}
 }
+
 .container {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
+	display: flex;
+	justify-content: space-between;
+	gap: 20px;
 }
-.new {
+
+/*.osusume {*/
+/*	font-family: 'Quicksand', sans-serif;*/
+/*	font-size: 30px;*/
+/*	color: rgb(255, 0, 0);*/
+/*	margin-top: 10px;*/
+/*	line-height: 1.5;*/
+/*	text-align: left;*/
+/*	font-weight: bold;*/
+/*	 增加粗体 */
+/*}*/
+.red {
 	font-family: 'Quicksand', sans-serif;
 	font-size: 30px;
 	color: rgb(255, 0, 0);
@@ -47,18 +59,18 @@ body {
 	line-height: 1.5;
 	text-align: left;
 	font-weight: bold;
-	/* 增加粗体 */
+
 }
 
-.osusume {
+.black {
 	font-family: 'Quicksand', sans-serif;
 	font-size: 30px;
-	color: rgb(57, 57, 57);
+	color: rgb(0, 0, 0);
 	margin-top: 10px;
 	line-height: 1.5;
 	text-align: left;
 	font-weight: bold;
-	/* 增加粗体 */
+
 }
 
 .ninki {
@@ -73,7 +85,7 @@ body {
 }
 
 .menu-item {
-	flex:1;
+	flex: 1;
 	background-color: rgb(255, 255, 255);
 	border: rgb(255, 255, 255) 5px solid;
 	margin: 10px;
