--- a/src/main/resources/templates/shopInformation.html
+++ b/src/main/resources/templates/shopInformation.html
@@ -54,7 +54,7 @@
 
 	<div>
 		<!--		<button class="fixed_btn">ボタン</button>-->
-		<a th:href="@{/cookCategory}" class="btn" >注文はこちら</a>
+		<a th:href="@{/cookCategory(shopName=${shop.shopName},id=${shop.id})}" class="btn" >注文はこちら</a>
 	</div>
 
 
