--- a/src/main/resources/static/css/settlement.css
+++ b/src/main/resources/static/css/settlement.css
@@ -190,58 +190,90 @@ header {
 	transform: translateY(-2px);
 	box-shadow: 0 10px 20px -5px rgb(0 0 0 / 30%), 0 0 5px rgb(0 0 0 / 30%);
 }
-
 .popup {
-	display: none;
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 80%;
-	max-width: 600px;
-	padding: 20px;
-	background-color: white;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-	z-index: 1000;
-	border-radius: 10px;
-}
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+        }
 
-.popup.active {
-	display: block;
-}
+        .popup table {
+            width: 100%;
+            border-collapse: collapse;
+        }
 
-.calendar {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
+        .popup th, .popup td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
 
-.day {
-	width: calc(100% / 7);
-	padding: 10px;
-	border: 1px solid #ddd;
-	text-align: center;
-	background-color: #fff;
-	border-radius: 5px;
-	margin: 5px 0;
-}
+        .popup th {
+            background-color: #f2f2f2;
+        }
 
-.today {
-	background-color: #ffeb3b;
-	font-weight: bold;
-}
+        .popup tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
 
-.overlay {
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.5);
-	z-index: 999;
-}
+        .popup tr:hover {
+            background-color: #f1f1f1;
+        }
+/*.popup {*/
+/*	display: none;*/
+/*	position: fixed;*/
+/*	top: 50%;*/
+/*	left: 50%;*/
+/*	transform: translate(-50%, -50%);*/
+/*	width: 80%;*/
+/*	max-width: 600px;*/
+/*	padding: 20px;*/
+/*	background-color: white;*/
+/*	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);*/
+/*	z-index: 1000;*/
+/*	border-radius: 10px;*/
+/*}*/
 
-.overlay.active {
-	display: block;
-}
+/*.popup.active {*/
+/*	display: block;*/
+/*}*/
+
+/*.calendar {*/
+/*	display: flex;*/
+/*	flex-wrap: wrap;*/
+/*	justify-content: space-between;*/
+/*}*/
+
+/*.day {*/
+/*	width: calc(100% / 7);*/
+/*	padding: 10px;*/
+/*	border: 1px solid #ddd;*/
+/*	text-align: center;*/
+/*	background-color: #fff;*/
+/*	border-radius: 5px;*/
+/*	margin: 5px 0;*/
+/*}*/
+
+/*.today {*/
+/*	background-color: #ffeb3b;*/
+/*	font-weight: bold;*/
+/*}*/
+
+/*.overlay {*/
+/*	display: none;*/
+/*	position: fixed;*/
+/*	top: 0;*/
+/*	left: 0;*/
+/*	width: 100%;*/
+/*	height: 100%;*/
+/*	background: rgba(0, 0, 0, 0.5);*/
+/*	z-index: 999;*/
+/*}*/
+
+/*.overlay.active {*/
+/*	display: block;*/
+/*}*/
